# agent-message

./: .dockerignore  .env.selfhost.example  .gitignore  AGENTS.md  AGENTS_backup.md  Makefile  PLAN.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  SPEC.md  dev-stop  dev-up  docker-compose.home.yml  docker-compose.yml  install.md  package.json  skills-lock.json
.claude/skills/: agent-dx-cli-scale  agent-message-cli.skill  (+1 more)
claude-message/: .gitignore  Cargo.toml  README.md  build.rs  package.json
claude-message/scripts/: prepare-npm-bundle.mjs
claude-message/src/: agent_message.rs  app.rs  claude.rs  log_ui.rs  main.rs  render.rs
cli/: go.mod  main.go
codex-message/: Cargo.toml  README.md  build.rs  package.json
codex-message/scripts/: prepare-npm-bundle.mjs
codex-message/src/: agent_message.rs  app.rs  codex.rs  log_ui.rs  main.rs  render.rs
deploy/: agent_gateway.mjs  agent_proxy_worker.mjs  agent_tunnel_config.yml  gateway.Dockerfile
howto/: connect-with-cloudflare-tunnel.md  connect-with-tailscale.md
ref/: codex-app-server-llm.txt
scripts/: generate-message-json-render-catalog-prompt.mjs  prepare-npm-bundle.mjs  print-message-json-render-catalog-prompt.mjs  sync-wrapper-package-versions.mjs
server/: Dockerfile  docker-entrypoint.sh  e2e_integration_test.go  go.mod  go.sum  main.go  main_test.go
server/ws/: hub.go  (+3 more)
shared/: json_render_validation.rs
skills/: agent-message-cli.md  agent-messenger-cli.md  frontend-skill.md
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
(+226 files in other folders)
